Fix flickering footer from Ionic upgrade (#781)
Resolves #780

--- a/src/index.css
+++ b/src/index.css
@@ -148,3 +148,15 @@ ion-fab-button {
 ion-fab.fab-vertical-top {
   top: 15vh;
 }
+
+/**
+ * This patch reverts the following Ionic change:
+ * https://github.com/ionic-team/ionic-framework/pull/28246/files#diff-8371750710eecf6a609337a240b7db295073f746f1cda13248f9780cc6f6ff24L159
+ *
+ * Private discord discussion: https://discord.com/channels/520266681499779082/1128001453676568637/1162812415054983198
+ *
+ * Fixes #780
+ */
+.ion-page {
+  overflow: hidden;
+}
